TestOptionsWithRanges -XX:NUMAInterleaveGranularity=2147483648 crashes VM

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b103
    • Verified

       Internal Error (C:\\jprt\\T\\P1\\214445.cplummer\\s\\hotspot\\src\\share\\vm\\memory\\virtualspace.cpp:215), pid=119884, tid=55904
      # assert(partition_size <= size()) failed: partition failed

            Assignee:
            Sangheon Kim (Inactive)
            Reporter:
            Joseph Provino (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: