8144949: TestOptionsWithRanges -XX:NUMAInterleaveGranularity=2147483648 crashes VM

Changed max range to 2G/8192G for NUMAInterleaveGranularity and removed constraint function

Reviewed-by: jwilhelm, jmasa